# CipherFiles

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/cipherfiles/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/cipherfiles/: AuthActivity.kt  BioAuthManager.kt  ChangePasswordActivity.kt  KeystoreManager.kt  MainActivity.kt  SessionKeyManager.kt  UserAuthManager.kt  UserDatabase.kt
app/src/main/res/layout/: activity_auth.xml  activity_change.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/cipherfiles/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
